# diamond-structure-identifier

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  plugin.json  vpm.json
include/volt/plugin/: identify_diamond_service.h
src/: identify_diamond_service.cpp  plugin.cpp
